--- a/pod-security/tests/default/test-disallow-host-namespaces.yaml
+++ b/pod-security/tests/default/test-disallow-host-namespaces.yaml
@@ -1,23 +1,37 @@
-apiVersion: apps/v1
-kind: Deployment
+---
+apiVersion: v1
+kind: Pod
 metadata:
-  name: test
-  labels:
-    app: test
+  name: host-namespaces-net
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: test
-  template:
-    metadata:
-      labels:
-        app: test
-    spec:
-      hostNetwork: true
-      hostPID: false
-      hostIPC: false
-      containers: 
-      - name: busybox
-        image: busybox:1.28
-        command: ["sleep", "9999"]
+  securityContext:
+    runAsNonRoot: true
+  hostNetwork: true
+  containers:
+  - name: host-namespaces-net
+    image: kubernetes/pause    
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: host-namespaces-pid
+spec:
+  securityContext:
+    runAsNonRoot: true
+  hostPID: true
+  containers: 
+  - name: host-namespaces-pid
+    image: kubernetes/pause
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: host-namespaces-ipc
+spec:
+  securityContext:
+    runAsNonRoot: true
+  hostIPC: true
+  containers: 
+  - name: host-namespaces-ipc
+    image: kubernetes/pause
+    
