--- a/pod-security/tests/default/test-disallow-selinux.yaml
+++ b/pod-security/tests/default/test-disallow-selinux.yaml
@@ -1,26 +1,45 @@
-apiVersion: apps/v1
-kind: Deployment
+---
+apiVersion: v1
+kind: Pod
 metadata:
-  name: test
-  labels:
-    app: test
+  name: selinux-pod
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: test
-  template:
-    metadata:
-      labels:
-        app: test
-    spec:
+  securityContext:
+    runAsNonRoot: true
+    seLinuxOptions:
+      user: foo
+  containers: 
+  - name: selinux
+    image: kubernetes/pause
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: selinux-ctnr
+spec:
+  securityContext:
+    runAsNonRoot: true
+  containers: 
+  - name: selinux
+    image: kubernetes/pause
+    securityContext:
+      seLinuxOptions:
+        level: "s0:c123,c456"
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: selinux-init-ctnr
+spec:
+  securityContext:
+    runAsNonRoot: true
+  initContainers:
+    - name: init
+      image: busybox
+      command: ["sleep", "9999"]
       securityContext:
-        # seLinuxOptions:
-        #   user: foo
-      containers: 
-      - name: busybox
-        image: busybox:1.28
-        command: ["sleep", "9999"]
-        securityContext:
-          seLinuxOptions:
-            level: "s0:c123,c456"
+        seLinuxOptions:
+          level: "s0:c123,c456"
+  containers: 
+  - name: selinux
+    image: kubernetes/pause
