--- a/pod-security/tests/default/test-restrict-apparmor-profiles.yaml
+++ b/pod-security/tests/default/test-restrict-apparmor-profiles.yaml
@@ -1,23 +1,13 @@
-### Awaiting enhancement in Kyverno (wildcard support in annotation key names in `pattern` statements) before this can be tested.
-apiVersion: apps/v1
-kind: Deployment
+---
+apiVersion: v1
+kind: Pod
 metadata:
-  name: test
-  labels:
-    app: test
+  name: apparmor
+  annotations:
+    container.apparmor.security.beta.kubernetes.io/apparmor: localhost/customprofile
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: test
-  template:
-    metadata:
-      labels:
-        app: test
-      annotations:
-        container.apparmor.security.beta.kubernetes.io/busybox: localhost/fooprofile
-    spec:
-      containers: 
-      - name: busybox
-        image: busybox:1.28
-        command: ["sleep", "9999"]
+  securityContext:
+      runAsNonRoot: true
+  containers: 
+  - name: apparmor
+    image: kubernetes/pause
