--- a/pod-security/tests/restricted/test-non-root-groups.yaml
+++ b/pod-security/tests/restricted/test-non-root-groups.yaml
@@ -1,27 +1,68 @@
-apiVersion: apps/v1
-kind: Deployment
+---
+apiVersion: v1
+kind: Pod
 metadata:
-  name: test
-  labels:
-    app: test
+  name: fs-group0
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: test
-  template:
-    metadata:
-      labels:
-        app: test
-    spec:
-      # securityContext:
-        # fsGroup: 0
-        # supplementalGroups:
-        #   - 0
-        # runAsGroup: 5
-      containers: 
-      - name: busybox
-        image: busybox:1.28
-        command: ["sleep", "9999"]
-        securityContext:
-          runAsGroup: 0
+  securityContext:
+    runAsNonRoot: true
+    fsGroup: 0
+  containers: 
+  - name: fs-group
+    image: busybox
+    command: ["sleep", "9999"]
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: supplemental-groups0
+spec:
+  securityContext:
+    runAsNonRoot: true
+    supplementalGroups:
+    - 0
+  containers: 
+  - name: supplemental-groups
+    image: busybox
+    command: ["sleep", "9999"]
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: run-as-group0-pod
+spec:
+  securityContext:
+    runAsNonRoot: true
+    runAsGroup: 0
+  containers: 
+  - name: run-as-group
+    image: busybox
+    command: ["sleep", "9999"]
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: fs-group-ctnr
+spec:
+  securityContext:
+    runAsNonRoot: true
+    fsGroup: 0
+  containers: 
+  - name: fs-group-ctnr
+    image: busybox
+    command: ["sleep", "9999"]
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: run-as-group-ctnr
+spec:
+  securityContext:
+    runAsNonRoot: true
+  containers: 
+  - name: run-as-group-ctnr
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      runAsGroup: 0
+
