--- a/pod-security/tests/restricted/test-require-run-as-nonroot.yaml
+++ b/pod-security/tests/restricted/test-require-run-as-nonroot.yaml
@@ -1,33 +1,44 @@
-apiVersion: apps/v1
-kind: Deployment
+---
+apiVersion: v1
+kind: Pod
 metadata:
-  name: test
-  labels:
-    app: test
+  name: nonroot-pod
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: test
-  template:
-    metadata:
-      labels:
-        app: test
-    spec:
-      securityContext:
-        runAsNonRoot: true
-      # initContainers:
-      # - name: alpine1
-      #   image: alpine
-      # - name: alpine2
-      #   image: alpine
-      #   securityContext:
-      #     runAsNonRoot: false
-      containers:
-      - name: busybox
-        image: busybox
-        command: ["sleep", "9999"]
-      - name: nginx
-        image: nginx
-        securityContext:
-          runAsNonRoot: false
+  securityContext:
+    runAsNonRoot: false
+  containers: 
+  - name: busybox
+    image: busybox
+    command: ["sleep", "9999"]
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: root-pod
+spec:
+  securityContext:
+    runAsNonRoot: true
+  containers: 
+  - name: root-pod
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      runAsNonRoot: false
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: root-init-ctnr
+spec:
+  securityContext:
+    runAsNonRoot: true
+  initContainers:
+  - name: root-init-ctnr
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      runAsNonRoot: false
+  containers: 
+  - name: app
+    image: busybox
+    command: ["sleep", "9999"]
