--- a/pod-security/tests/restricted/test-restrict-seccomp.yaml
+++ b/pod-security/tests/restricted/test-restrict-seccomp.yaml
@@ -1,26 +1,45 @@
-apiVersion: apps/v1
-kind: Deployment
+---
+apiVersion: v1
+kind: Pod
 metadata:
-  name: test
-  labels:
-    app: test
+  name: seccomp-pod
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: test
-  template:
-    metadata:
-      labels:
-        app: test
-    spec:
-      securityContext:
-        seccompProfile:
-          type: Unconfined
-      containers: 
-      - name: busybox
-        image: busybox:1.28
-        command: ["sleep", "9999"]
-        securityContext:
-          # seccompProfile:
-          #   type: Unconfined
+  securityContext:
+    runAsNonRoot: true
+    seccompProfile:
+      type: Unconfined
+  containers: 
+  - name: seccomp
+    image: busybox
+    command: ["sleep", "9999"]
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-ctnr
+spec:
+  securityContext:
+    runAsNonRoot: true
+  containers: 
+  - name: seccomp
+    image: busybox
+    command: ["sleep", "9999"]
+    seccompProfile:
+      type: Unconfined
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-init-ctnr
+spec:
+  securityContext:
+    runAsNonRoot: true
+  initContainers:
+  - name: seccomp-init
+    image: busybox
+    command: ["sleep", "9999"]
+    seccompProfile:
+      type: Unconfined    
+  containers: 
+   - name: seccomp
+     image: kubernetes/pause
