add back policy to check groups
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/pod-security/restricted/kustomization.yaml
+++ b/pod-security/restricted/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - restrict-volume-types.yaml
 - deny-privilege-escalation.yaml
 - require-run-as-nonroot.yaml
+- require-non-root-groups.yaml
 - restrict-seccomp.yaml
 
 patches:
