--- a/pod-security/restricted/require-non-root-groups.yaml
+++ b/pod-security/restricted/require-non-root-groups.yaml
@@ -56,4 +56,4 @@ spec:
         pattern:
           spec:
             =(securityContext):
-              X(fsGroup): "null"
+              X(fsGroup): "*"
