--- a/pod-security/tests/default/test-disallow-proc-mount.yaml
+++ b/pod-security/tests/default/test-disallow-proc-mount.yaml
@@ -1,6 +1,6 @@
-### This test will always pass unless the kubelet flag `ProcMountType` is passed. 
+### This test will always pass unless the feature gate `ProcMountType` is enabled. 
 # Any values set for `procMount` will be mutated by Kubernetes to be read as `Default` 
-# upon submission. Therefore, without the kubelet modification this manifest will always 
+# upon submission. Therefore, without the feature gate enabled this manifest will always 
 # validate to true.
 ---
 apiVersion: v1
