fix best practices
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/best-practices/restrict_image_registries.yaml
+++ b/best-practices/restrict_image_registries.yaml
@@ -8,7 +8,8 @@ metadata:
       Images from unknown registries may not be scanned and secured. 
       Requiring use of known registries helps reduce threat exposure.
 spec:
-  validationFailureAction: audit
+  background: false
+  validationFailureAction: enforce
   rules:
   - name: validate-registries
     match:
