--- a/best-practices/restrict_node_port.yaml
+++ b/best-practices/restrict_node_port.yaml
@@ -4,7 +4,7 @@ metadata:
   name: restrict-nodeport
   annotations:
     policies.kyverno.io/title: Disallow Node Ports
-    policies.kyverno.io/category: Best Practice
+    policies.kyverno.io/category: "Best Practices"
     policies.kyverno.io/description: >-
       A Kubernetes service of type NodePort uses a host port to receive traffic from 
       any source. A 'NetworkPolicy' resource cannot be used to control traffic to host ports. 
