--- a/best-practices/disallow_default_namespace/test.yaml
+++ b/best-practices/disallow_default_namespace/test.yaml
@@ -1,9 +1,9 @@
 name: disallow_default_namespace
 description: "...."
 policies:
-  -  best-practices\disallow_default_namespace\disallow_default_namespace_policy.yaml
+  -  disallow_default_namespace_policy.yaml
 resources:
-  -  best-practices\disallow_default_namespace\disallow_default_namespace.yaml
+  -  disallow_default_namespace.yaml
 results:
   - policy: disallow-default-namespace
     rule: require-namespace
