change result subfolder

--- a/best-practices/disallow_bind_mounts/test.yaml
+++ b/best-practices/disallow_bind_mounts/test.yaml
@@ -8,4 +8,4 @@ results:
   - policy: disallow-bind-mounts
     rule: validate-hostPath
     resource: image-with-hostpath
-    status: pass
+    status: fail
