change yamls for variables test

--- a/best-practices/disallow_bind_mounts/value.yml
+++ b/best-practices/disallow_bind_mounts/value.yml
@@ -3,4 +3,4 @@ policies:
     resources:
       - name: image-with-hostpath
         values:
-          message: Pod
+          request.message: Pod
