--- a/best-practices/disallow_bind_mounts/disallow_bind_mounts.yaml
+++ b/best-practices/disallow_bind_mounts/disallow_bind_mounts.yaml
@@ -19,7 +19,7 @@ spec:
         kinds: 
         - Pod
     validate: 
-      message: "Host path volumes are not allowed"
+      message: "Host path volumes are not allowed {{ request.message }}"
       pattern: 
         spec: 
           =(volumes): 
