--- a/best-practices/disallow_bind_mounts/test.yaml
+++ b/best-practices/disallow_bind_mounts/test.yaml
@@ -4,9 +4,8 @@ policies:
   - disallow_bind_mounts.yaml
 resources:
   - disallow_host_filesystem_pass.yaml
-variables: value.yml
 results:
   - policy: disallow-bind-mounts
     rule: validate-hostPath
     resource: image-with-hostpath
-    status: pass
+    status: fail
