--- a/best-practices/disallow_default_namespace/disallow_default_namespace.yaml
+++ b/best-practices/disallow_default_namespace/disallow_default_namespace.yaml
@@ -1,11 +1,36 @@
-apiVersion: v1
-kind: Pod
+apiVersion: kyverno.io/v1
+kind: ClusterPolicy
 metadata:
-  name: myapp-pod
-  namespace: default
-  labels:
-    app: myapp
-spec: 
-  containers:
-  - name: nginx
-    image: nginx
+  name: disallow-default-namespace
+  annotations:
+    pod-policies.kyverno.io/autogen-controllers: none
+    policies.kyverno.io/category: Multi-Tenancy
+    policies.kyverno.io/description: >-
+      Kubernetes namespaces are an optional feature that provide a way to segment and 
+      isolate cluster resources across multiple applications and users. As a best 
+      practice, workloads should be isolated with namespaces. Namespaces should be required 
+      and the default (empty) namespace should not be used.
+spec:
+  validationFailureAction: audit
+  rules:
+  - name: validate-namespace
+    match:
+      resources:
+        kinds:
+        - Pod
+    validate:
+      message: "Using 'default' namespace is not allowed."
+      pattern:
+        metadata:
+          namespace: "!default"
+  - name: require-namespace
+    match:
+      resources:
+        kinds:
+        - Pod
+    validate:
+      message: "A namespace is required."
+      pattern:
+        metadata:
+          namespace: "?*"
+  
