--- a/best-practices/disallow_default_namespace/test.yaml
+++ b/best-practices/disallow_default_namespace/test.yaml
@@ -1,9 +1,9 @@
 name: disallow_default_namespace
 description: "...."
 policies:
-  -  disallow_default_namespace_policy.yaml
-resources:
   -  disallow_default_namespace.yaml
+resources:
+  -  resources.yaml
 results:
   - policy: disallow-default-namespace
     rule: require-namespace
