--- a/best-practices/disallow_default_namespace/resources.yaml
+++ b/best-practices/disallow_default_namespace/resources.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: myapp-pod
+  namespace: default
   labels:
     app: myapp
 spec: 
   containers:
   - name: nginx
-    image: nginx:latest
+    image: nginx
