chnage status of result

--- a/best-practices/disallow_default_namespace/test.yaml
+++ b/best-practices/disallow_default_namespace/test.yaml
@@ -8,8 +8,8 @@ results:
   - policy: disallow-default-namespace
     rule: require-namespace
     resource: myapp-pod
-    status: fail
+    status: pass
   - policy: disallow-default-namespace
     rule: validate-namespace
     resource: myapp-pod
-    status: fail
+    status: pass
