--- a/best-practices/disallow_default_namespace/test.yaml
+++ b/best-practices/disallow_default_namespace/test.yaml
@@ -12,4 +12,4 @@ results:
   - policy: disallow-default-namespace
     rule: validate-namespace
     resource: myapp-pod
-    status: pass
+    status: fail
