--- a/best-practices/require_pod_requests_limits/test.yaml
+++ b/best-practices/require_pod_requests_limits/test.yaml
@@ -4,7 +4,7 @@ policies:
 resources:
   -  resource.yaml
 results:
-  - policy: require-pod-requests-limits
-    rule: validate-nodeport
+  - policy: require-requests-limits
+    rule: validate-resources
     resource: myapp-pod
     status: pass
