--- a/best-practices/require_pod_requests_limits/require_pod_requests_limits.yaml
+++ b/best-practices/require_pod_requests_limits/require_pod_requests_limits.yaml
@@ -11,7 +11,7 @@ metadata:
       and 'resources.limits.memory' per pod. If a namespace level request or limit is specified, 
       defaults will automatically be applied to each pod based on the 'LimitRange' configuration.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   rules:
   - name: validate-resources
     match:
