--- a/pod-security/default/disallow-proc-mount/test.yaml
+++ b/pod-security/default/disallow-proc-mount/test.yaml
@@ -1,6 +1,6 @@
 name: require-default-proc-mount
 policies:
-  -  check-proc-mount.yaml
+  -  disallow-proc-mount.yaml
 resources:
   -  resource.yaml
 results:
