--- a/other/restrict_service_account.yaml
+++ b/other/restrict_service_account.yaml
@@ -11,7 +11,7 @@ metadata:
       external data source to map service accounts to images.
       Example: 'sa-name: ["registry/image-name"]'
 spec:
-  background: true
+  background: false
   validationFailureAction: enforce
   rules:
   - name: validate-service-account
