--- a/other/restrict_pod_count_per_node.yaml
+++ b/other/restrict_pod_count_per_node.yaml
@@ -7,9 +7,9 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/description: >-
       Sample policy to restrict pod count on node 'minikube' to be no more than 10.
-    pod-policies.kyverno.io/autogen-controllers: None
+    # pod-policies.kyverno.io/autogen-controllers: None
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   background: false
   rules:
     - name: restrict-pod-count
