--- a/best-practices/require_drop_all/require_drop_all.yaml
+++ b/best-practices/require_drop_all/require_drop_all.yaml
@@ -3,6 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: drop-all-capabilities
   annotations:
+    policies.kyverno.io/title: Drop All Capabilities
     policies.kyverno.io/category: Best Practices
     policies.kyverno.io/description: >-
       Capabilities permit privileged actions without giving full root access. All 
