--- a/best-practices/require_labels/require_labels.yaml
+++ b/best-practices/require_labels/require_labels.yaml
@@ -3,10 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: require-labels
   annotations:
+    policies.kyverno.io/title: Require Labels
     policies.kyverno.io/category: Best Practices
     policies.kyverno.io/description: >-
       Define and use labels that identify semantic attributes of your application or Deployment.
-      A common set of labels allows tools to work interoperably, describing objects in a common manner that 
+      A common set of labels allows tools to work collaboratively, describing objects in a common manner that 
       all tools can understand. The recommended labels describe applications in a way that can be 
       queried. 
 spec:
