--- a/best-practices/restrict_image_registries/restrict_image_registries.yaml
+++ b/best-practices/restrict_image_registries/restrict_image_registries.yaml
@@ -3,6 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: restrict-image-registries
   annotations:
+    policies.kyverno.io/title: Restrict Image Registries
     policies.kyverno.io/category: Best Practices
     policies.kyverno.io/description: >-
       Images from unknown registries may not be scanned and secured. 
