--- a/other/ensure_probes_different.yaml
+++ b/other/ensure_probes_different.yaml
@@ -7,6 +7,7 @@ metadata:
     pod-policies.kyverno.io/autogen-controllers: DaemonSet,Deployment,StatefulSet  
     policies.kyverno.io/title: Validate Probes
     policies.kyverno.io/category: Sample
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       Sample policy to check that liveness and readiness probes are not set to the same values.
 spec:
