--- a/other/require_deployments_have_multiple_replicas.yaml
+++ b/other/require_deployments_have_multiple_replicas.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Require Multiple Replicas
     policies.kyverno.io/category: Sample
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       Sample policy that requires more than one replica for deployments.    
 spec:
