--- a/other/restrict_loadbalancer.yaml
+++ b/other/restrict_loadbalancer.yaml
@@ -4,7 +4,8 @@ metadata:
   name: no-loadbalancer-service
   annotations:
     policies.kyverno.io/title: Disallow Service Type LoadBalancer
-    policies.kyverno.io/category: Sample 
+    policies.kyverno.io/category: Sample
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       Sample policy to restrict use of Service type LoadBalancer.
 spec:
