--- a/pod-security/default/disallow-host-ports/disallow-host-ports.yaml
+++ b/pod-security/default/disallow-host-ports/disallow-host-ports.yaml
@@ -4,6 +4,7 @@ metadata:
   name: disallow-host-ports
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Default)
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       Access to host ports allows potential snooping of network traffic and should not be
       allowed, or at minimum restricted to a known list.
