--- a/pod-security/default/disallow-proc-mount/disallow-proc-mount.yaml
+++ b/pod-security/default/disallow-proc-mount/disallow-proc-mount.yaml
@@ -4,6 +4,7 @@ metadata:
   name: require-default-proc-mount
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Default)
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       The default /proc masks are set up to reduce attack surface and should be required.
 spec:
