--- a/pod-security/default/disallow-selinux/disallow-selinux.yaml
+++ b/pod-security/default/disallow-selinux/disallow-selinux.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Disallow SELinux
     policies.kyverno.io/category: Pod Security Standards (Default)
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       SELinux options can be used to escalate privileges and should not be allowed.
 spec:
