--- a/pod-security/restricted/require-non-root-groups/require-non-root-groups.yaml
+++ b/pod-security/restricted/require-non-root-groups/require-non-root-groups.yaml
@@ -4,6 +4,7 @@ metadata:
   name: require-non-root-groups
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       Containers should be forbidden from running with a root primary or supplementary GID.
 spec:
