--- a/pod-security/default/disallow-host-ipc/disallow-host-ipc.yaml
+++ b/pod-security/default/disallow-host-ipc/disallow-host-ipc.yaml
@@ -4,6 +4,7 @@ metadata:
   name: disallow-host-ipc
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Default)
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: Sharing the host's PID namespace allows visibility of process 
       on the host, potentially exposing process information. Sharing the host's IPC namespace allows 
       the container process to communicate with processes on the host. To avoid pod container from 
