--- a/pod-security/default/disallow-host-namespaces/disallow-host-namespaces.yaml
+++ b/pod-security/default/disallow-host-namespaces/disallow-host-namespaces.yaml
@@ -4,6 +4,7 @@ metadata:
   name: disallow-host-namespaces
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Default)
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >- 
       Host namespaces (Process ID namespace, Inter-Process Communication namespace, and
       network namespace) allow access to shared information and can be used to elevate
