--- a/pod-security/default/disallow-privileged-containers/disallow-privileged-containers.yaml
+++ b/pod-security/default/disallow-privileged-containers/disallow-privileged-containers.yaml
@@ -4,6 +4,7 @@ metadata:
   name: disallow-privileged-containers
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Default)
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       Privileged mode disables most security mechanisms and must not be allowed.
 spec:
