--- a/pod-security/default/restrict-apparmor-profiles/restrict-apparmor-profiles.yaml
+++ b/pod-security/default/restrict-apparmor-profiles/restrict-apparmor-profiles.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Restrict AppArmor
     policies.kyverno.io/category: Pod Security Standards (Default)
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       On supported hosts, the 'runtime/default' AppArmor profile is applied by default. 
       The default policy should prevent overriding or disabling the policy, or restrict 
