--- a/pod-security/default/restrict-sysctls/restrict-sysctls.yaml
+++ b/pod-security/default/restrict-sysctls/restrict-sysctls.yaml
@@ -4,6 +4,7 @@ metadata:
   name: restrict-sysctls
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Default)
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       Sysctls can disable security mechanisms or affect all containers on a
       host, and should be disallowed except for an allowed "safe" subset. A
