--- a/pod-security/restricted/deny-privilege-escalation/deny-privilege-escalation.yaml
+++ b/pod-security/restricted/deny-privilege-escalation/deny-privilege-escalation.yaml
@@ -4,6 +4,7 @@ metadata:
   name: deny-privilege-escalation
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
+    policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       Privilege escalation, such as via set-user-ID or set-group-ID file mode, should not be allowed.
 spec:
