--- a/best-practices/disallow_helm_tiller/disallow_helm_tiller.yaml
+++ b/best-practices/disallow_helm_tiller/disallow_helm_tiller.yaml
@@ -1,10 +1,10 @@
-apiVersion : kyverno.io/v1
+apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: disallow-helm-tiller
   annotations:
     policies.kyverno.io/title: Disallow Helm Tiller
-    policies.kyverno.io/category: Security
+    policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       Tiller has known security challenges. It requires administrative privileges and acts as a shared
@@ -13,15 +13,15 @@ metadata:
 spec:
   validationFailureAction: audit
   rules:
-  - name: validate-helm-tiller
-    match:
-      resources:
-        kinds:
-        - Pod
-    validate:
-      message: "Helm Tiller is not allowed"  
-      pattern:
-        spec:
-          containers:
-          - name: "*"
-            image: "!*tiller*"
+    - name: validate-helm-tiller
+      match:
+        resources:
+          kinds:
+            - Pod
+      validate:
+        message: "Helm Tiller is not allowed"
+        pattern:
+          spec:
+            containers:
+              - name: "*"
+                image: "!*tiller*"
