--- a/pod-security/baseline/disallow-proc-mount/disallow-proc-mount.yaml
+++ b/pod-security/baseline/disallow-proc-mount/disallow-proc-mount.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: require-default-proc-mount
   annotations:
-    policies.kyverno.io/category: Pod Security Standards (Default)
+    policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/description: >-
       The default /proc masks are set up to reduce attack surface and should be required.
