--- a/pod-security/baseline/restrict-apparmor-profiles/restrict-apparmor-profiles.yaml
+++ b/pod-security/baseline/restrict-apparmor-profiles/restrict-apparmor-profiles.yaml
@@ -4,7 +4,7 @@ metadata:
   name: restrict-apparmor-profiles
   annotations:
     policies.kyverno.io/title: Restrict AppArmor
-    policies.kyverno.io/category: Pod Security Standards (Default)
+    policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/minversion: 1.3.0
     policies.kyverno.io/description: >-
@@ -15,17 +15,17 @@ spec:
   validationFailureAction: audit
   background: true
   rules:
-  - name: app-armor
-    match:
-      resources:
-        kinds:
-        - Pod
-    validate:
-      message: >-
-        Specifying other AppArmor profiles is disallowed. The annotation
-        container.apparmor.security.beta.kubernetes.io must not be defined,
-        or must not be set to anything other than `runtime/default`.
-      pattern:
-        metadata:
-          =(annotations):
-            =(container.apparmor.security.beta.kubernetes.io/*): "runtime/default"
+    - name: app-armor
+      match:
+        resources:
+          kinds:
+            - Pod
+      validate:
+        message: >-
+          Specifying other AppArmor profiles is disallowed. The annotation
+          container.apparmor.security.beta.kubernetes.io must not be defined,
+          or must not be set to anything other than `runtime/default`.
+        pattern:
+          metadata:
+            =(annotations):
+              =(container.apparmor.security.beta.kubernetes.io/*): "runtime/default"
