update secrets policy
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/disallow_secrets_from_env_vars.yaml
+++ b/other/disallow_secrets_from_env_vars.yaml
@@ -26,3 +26,16 @@ spec:
             =(env):
             - =(valueFrom):
                 X(secretKeyRef): "null"
+  - name: secrets-not-from-envfrom
+    match:
+      resources:
+        kinds:
+        - Pod
+    validate:
+      message: "Secrets must not come from envFrom statements."
+      pattern:
+        spec:
+          containers:
+          - name: "*"
+            =(envFrom):
+            - X(secretRef): "null"
