fix "Restrict control plane scheduling" and add new rule
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/restrict_controlplane_scheduling.yaml
+++ b/other/restrict_controlplane_scheduling.yaml
@@ -13,7 +13,7 @@ spec:
   validationFailureAction: enforce
   background: false
   rules:
-  - name: restrict-controlplane-scheduling
+  - name: restrict-controlplane-scheduling-master
     match:
       resources:
         kinds:
@@ -23,4 +23,15 @@ spec:
       pattern:
         spec:
           =(tolerations):
-            - X(key): "node-role.kubernetes.io/master"
+            - key: "!node-role.kubernetes.io/master"
+  - name: restrict-controlplane-scheduling-control-plane
+    match:
+      resources:
+        kinds:
+        - Pod
+    validate:
+      message: Pods may not use tolerations which schedule on control plane nodes.
+      pattern:
+        spec:
+          =(tolerations):
+            - key: "!node-role.kubernetes.io/control-plane"
