Update tests for PolicyReportResult CRD wgpolicyk8s/v1alpha2
Signed-off-by: Frank Jogeleit <frank.jogeleit@web.de>

--- a/best-practices/disallow_cri_sock_mount/test.yaml
+++ b/best-practices/disallow_cri_sock_mount/test.yaml
@@ -7,8 +7,8 @@ results:
   - policy: disallow-container-sock-mounts
     rule: validate-docker-sock-mount
     resource: pod-with-docker-sock-mount
-    status: fail
+    result: fail
   - policy: disallow-container-sock-mounts
     rule: validate-containerd-sock-mount
     resource: pod-with-docker-sock-mount
-    status: pass
+    result: pass
