--- a/best-practices/disallow_latest_tag/test.yaml
+++ b/best-practices/disallow_latest_tag/test.yaml
@@ -7,8 +7,8 @@ results:
   - policy: disallow-latest-tag
     rule: require-image-tag
     resource: myapp-pod
-    status: pass
+    result: pass
   - policy: disallow-latest-tag
     rule: validate-image-tag
     resource: myapp-pod
-    status: pass
+    result: pass
