--- a/best-practices/require_pod_requests_limits/test.yaml
+++ b/best-practices/require_pod_requests_limits/test.yaml
@@ -7,4 +7,4 @@ results:
   - policy: require-requests-limits
     rule: validate-resources
     resource: myapp-pod
-    status: pass
+    result: pass
