--- a/best-practices/require_probes/test.yaml
+++ b/best-practices/require_probes/test.yaml
@@ -7,4 +7,4 @@ results:
   - policy: require-pod-probes
     rule: validate-livenessProbe-readinessProbe
     resource: myapp-pod
-    status: fail
+    result: fail
