--- a/best-practices/restrict_image_registries/test.yaml
+++ b/best-practices/restrict_image_registries/test.yaml
@@ -7,4 +7,4 @@ results:
   - policy: restrict-image-registries
     rule: validate-registries
     resource: k8s-nginx
-    status: pass
+    result: pass
