--- a/pod-security/restricted/restrict-volume-types/test.yaml
+++ b/pod-security/restricted/restrict-volume-types/test.yaml
@@ -7,8 +7,8 @@ results:
   - policy: restrict-volume-types
     rule: restricted-vol-gcePersistentDisk
     resource: gce-pd
-    status: fail
+    result: fail
   - policy: restrict-volume-types
     rule: restricted-vol-awsElasticBlockStore
     resource: gce-pd
-    status: pass
+    result: pass
