--- a/best-practices/disallow_helm_tiller/test.yaml
+++ b/best-practices/disallow_helm_tiller/test.yaml
@@ -7,4 +7,4 @@ results:
   - policy: disallow-helm-tiller
     rule: validate-helm-tiller
     resource: pod-helm-tiller
-    status: fail
+    result: fail
