--- a/best-practices/require_drop_all/test.yaml
+++ b/best-practices/require_drop_all/test.yaml
@@ -7,4 +7,4 @@ results:
   - policy: drop-all-capabilities
     rule: check-init-containers
     resource:  add-capabilities
-    status: fail
+    result: fail
