--- a/best-practices/require_ro_rootfs/test.yaml
+++ b/best-practices/require_ro_rootfs/test.yaml
@@ -7,4 +7,4 @@ results:
   - policy: require-ro-rootfs
     rule: validate-readOnlyRootFilesystem
     resource: ghost-with-readonly-rootfilesystem
-    status: fail
+    result: fail
