--- a/pod-security/baseline/disallow-adding-capabilities/test.yaml
+++ b/pod-security/baseline/disallow-adding-capabilities/test.yaml
@@ -7,4 +7,4 @@ results:
   - policy: disallow-add-capabilities
     rule: capabilities
     resource: add-new-capabilities
-    status: fail
+    result: fail
