Fix tests for require_drop_all
Signed-off-by: Trey Dockendorf <tdockendorf@osc.edu>

--- a/best-practices/require_drop_all/test.yaml
+++ b/best-practices/require_drop_all/test.yaml
@@ -5,6 +5,6 @@ resources:
   -  resource.yaml
 results:
   - policy: drop-all-capabilities
-    rule: check-init-containers
+    rule: check-containers
     resource:  add-capabilities
     status: fail
