--- a/pod-security/restricted/require-non-root-groups/test.yaml
+++ b/pod-security/restricted/require-non-root-groups/test.yaml
@@ -16,4 +16,12 @@ results:
     rule:  check-fsGroup
     resource: fs-group0
     status: fail
+  - policy: require-non-root-groups
+    rule: check-supplementalGroups
+    resource: supplemental-groups0
+    status: fail
+  - policy: require-non-root-groups
+    rule: check-fsGroup
+    resource: supplemental-groups0
+    status: pass
 
